--- a/index.html/details-form.html
+++ b/index.html/details-form.html
@@ -24,22 +24,70 @@
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required>
 
+            <div class="contact-method-group">
+                <span class="contact-method-label">How would you like us to contact you?</span>
+                <div class="radio-options">
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Email" required>
+                        <span class="custom-radio"></span>
+                        Email
+                    </label>
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Phone" required>
+                        <span class="custom-radio"></span>
+                        Phone
+                    </label>
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Either" required>
+                        <span class="custom-radio"></span>
+                        Either
+                    </label>
+                </div>
+            </div>
+
             <label for="message">How can we help you?</label>
             <textarea id="message" name="message" rows="4" placeholder="Describe your needs or the service you want..."></textarea>
 
             <button type="submit" class="service-btn">Send Request</button>
         </form>
-        <div id="thankYouMsg" style="display:none;text-align:center;margin-top:2rem;font-size:1.2rem;color:#00695c;font-weight:600;">Thank you! Your request has been sent. We will reach out to you in a few minutes.</div>
+        <div id="thankYouMsg" class="thankyou-card" style="display:none;">
+            <img src="../SS5.png" alt="Diaspora Connect Logo" style="display:block;margin:0 auto 2rem auto;max-width:180px;width:40vw;">
+            <h2 style="font-size:2.2rem;color:#2b1055;font-weight:900;margin-bottom:1.2rem;">Thank you for your request!</h2>
+            <p style="font-size:1.25rem;color:#00695c;font-weight:600;">We have received your details and will reach out to you in a few minutes.</p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Diaspora Connect. All rights reserved.</p>
     </footer>
     <script>
-    document.getElementById('detailsForm').addEventListener('submit', function(e) {
-        setTimeout(function() {
-            document.getElementById('detailsForm').style.display = 'none';
-            document.getElementById('thankYouMsg').style.display = 'block';
-        }, 100);
+    document.getElementById('detailsForm').addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const form = e.target;
+        const data = new FormData(form);
+        const thankYou = document.getElementById('thankYouMsg');
+        try {
+            const response = await fetch(form.action, {
+                method: 'POST',
+                body: data,
+                headers: { 'Accept': 'application/json' }
+            });
+            if (response.ok) {
+                form.style.display = 'none';
+                thankYou.style.display = 'block';
+            } else {
+                const errorMsg = document.createElement('div');
+                errorMsg.textContent = 'Sorry, there was a problem sending your request. Please try again.';
+                errorMsg.style.color = '#d32f2f';
+                errorMsg.style.marginTop = '1rem';
+                form.appendChild(errorMsg);
+            }
+        } catch (err) {
+            const errorMsg = document.createElement('div');
+            errorMsg.textContent = 'Network error. Please check your connection and try again.';
+            errorMsg.style.color = '#d32f2f';
+            errorMsg.style.marginTop = '1rem';
+            form.appendChild(errorMsg);
+        }
     });
     </script>
 </body>
