--- a/index.html/index.html
+++ b/index.html/index.html
@@ -9,13 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header>
         <div class="navbar">
-            <div class="logo">
-                <img src="../SS2.png" alt="Diaspora Connect Company Logo" height="48">
-                <span>Diaspora Connect</span>
+            <div class="logo" style="font-size:2.1rem;">
+                <img src="../SS2.png" alt="Diaspora Connect Company Logo" height="72" style="height:72px;width:auto;">
+                <span style="font-size:2.2rem;">Diaspora Connect</span>
             </div>
             <nav>
                 <ul>
@@ -27,7 +31,8 @@
         </div>
         <section class="hero">
             <div class="hero-content">
-                <h1>Connecting Kenyans in America to Home</h1>
+                <h1 style="font-size:4.5rem;letter-spacing:4px;">Diaspora Connect</h1>
+                <p style="font-size:1.7rem;">Connecting Kenyans in America to Home</p>
                 <p>Your trusted partner for car hire, property, travel, and more in Kenya. Hassle-free. Reliable. Personal.</p>
                 <a href="#services" class="cta-btn">Explore Our Services</a>
             </div>
@@ -208,7 +213,11 @@
                     <input type="email" id="newsletterEmail" name="email" required placeholder="Your email address">
                     <button type="submit" class="newsletter-btn">Subscribe</button>
                 </form>
-                <div id="newsletterThankYou" class="newsletter-thankyou">Thank you for subscribing! You'll receive updates about new services.</div>
+                <div id="newsletterThankYou" class="newsletter-thankyou" style="display:none;">
+                    <img src="../SS5.png" alt="Diaspora Connect Logo" style="display:block;margin:0 auto 2rem auto;max-width:180px;width:40vw;">
+                    <h2 style="font-size:2.2rem;color:#2b1055;font-weight:900;margin-bottom:1.2rem;">Thank you for subscribing!</h2>
+                    <p style="font-size:1.25rem;color:#00695c;font-weight:600;">You'll receive updates about new services, offers, and news from Diaspora Connect.</p>
+                </div>
             </div>
         </section>
     </main>
@@ -217,11 +226,34 @@
     </footer>
     <script src="script.js"></script>
     <script>
-    document.getElementById('newsletterForm').addEventListener('submit', function(e) {
-        setTimeout(function() {
-            document.getElementById('newsletterForm').style.display = 'none';
-            document.getElementById('newsletterThankYou').style.display = 'block';
-        }, 100);
+    document.getElementById('newsletterForm').addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const form = e.target;
+        const thankYou = document.getElementById('newsletterThankYou');
+        const data = new FormData(form);
+        try {
+            const response = await fetch(form.action, {
+                method: 'POST',
+                body: data,
+                headers: { 'Accept': 'application/json' }
+            });
+            if (response.ok) {
+                form.style.display = 'none';
+                thankYou.style.display = 'block';
+            } else {
+                const errorMsg = document.createElement('div');
+                errorMsg.textContent = 'Sorry, there was a problem subscribing. Please try again.';
+                errorMsg.style.color = '#d32f2f';
+                errorMsg.style.marginTop = '1rem';
+                form.appendChild(errorMsg);
+            }
+        } catch (err) {
+            const errorMsg = document.createElement('div');
+            errorMsg.textContent = 'Network error. Please check your connection and try again.';
+            errorMsg.style.color = '#d32f2f';
+            errorMsg.style.marginTop = '1rem';
+            form.appendChild(errorMsg);
+        }
     });
     </script>
 </body>
