--- a/index.html/online-exam.html
+++ b/index.html/online-exam.html
@@ -23,6 +23,27 @@
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required>
 
+            <div class="contact-method-group">
+                <span class="contact-method-label">How would you like us to contact you?</span>
+                <div class="radio-options">
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Email" required>
+                        <span class="custom-radio"></span>
+                        Email
+                    </label>
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Phone" required>
+                        <span class="custom-radio"></span>
+                        Phone
+                    </label>
+                    <label class="radio-option">
+                        <input type="radio" name="contact_method" value="Either" required>
+                        <span class="custom-radio"></span>
+                        Either
+                    </label>
+                </div>
+            </div>
+
             <label for="subject">Subject</label>
             <input type="text" id="subject" name="subject" required>
 
