--- a/index.html/assignments.html
+++ b/index.html/assignments.html
@@ -59,6 +59,22 @@
     <footer>
         <p>&copy; 2025 Diaspora Connect. All rights reserved.</p>
     </footer>
+    <!-- Radio Streaming Section -->
+    <section class="radio-section" style="max-width: 500px; margin: 2rem auto; background: #f9f9f9; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.04); padding: 2rem; text-align: center;">
+        <h2 style="margin-bottom: 1rem; color: #2a3a4b;">Stream Diaspora Radio</h2>
+        <label for="radioSelect" style="font-weight: 500;">Choose a station:</label>
+        <select id="radioSelect" style="margin: 0.5rem 0 1rem 0; padding: 0.5rem; border-radius: 6px; border: 1px solid #ccc;">
+            <option value="https://stream.live.vc.bbcmedia.co.uk/bbc_world_service">BBC World Service</option>
+            <option value="https://icecast.vgtrk.cdnvideo.ru/vestifm_aac_64kbps">Vesti FM (Russia)</option>
+            <option value="https://us4.internet-radio.com/proxy/977music?mp=/stream">977 80s Hits (USA)</option>
+        </select>
+        <div style="margin: 1rem 0;">
+            <audio id="radioPlayer" controls style="width: 100%; border-radius: 6px;">
+                <source src="https://stream.live.vc.bbcmedia.co.uk/bbc_world_service" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </section>
     <script>
     document.getElementById('assignmentForm').addEventListener('submit', function(e) {
         e.preventDefault();
@@ -73,6 +89,12 @@
             `Name: ${name}\nEmail: ${email}\nPhone: ${phone}\nSubject: ${subject}\nDeadline: ${deadline}\nAssignment Details: ${description}`
         );
         window.location.href = `mailto:diasporaconnect@example.com?subject=${subjectLine}&body=${body}`;
+    });
+    // Radio player logic
+    document.getElementById('radioSelect').addEventListener('change', function() {
+        var player = document.getElementById('radioPlayer');
+        player.src = this.value;
+        player.play();
     });
     </script>
 </body>
