--- a/index.html/index.html
+++ b/index.html/index.html
@@ -13,6 +13,61 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <style>
+        body {
+            background: none;
+            background-color: #f8f6f2;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            z-index: 0;
+            background: url('../KE_ART_1.png') top center/cover no-repeat;
+            filter: blur(8px) brightness(0.85) contrast(1.08);
+            opacity: 0.55;
+        }
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            z-index: 0;
+            background: linear-gradient(rgba(233,185,127,0.28), rgba(43,16,85,0.13));
+            pointer-events: none;
+        }
+        .ke-art-float {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 160px;
+            height: 160px;
+            z-index: 2;
+            opacity: 1;
+            pointer-events: none;
+            background: url('../KE_ART_3.png') center center/contain no-repeat;
+        }
+        @media (max-width: 700px) {
+            .ke-art-float {
+                width: 48px;
+                height: 48px;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+            .about-section {
+                padding-top: 3.5rem;
+            }
+        }
+        main, header, footer, .ke-art-float {
+            position: relative;
+            z-index: 2;
+        }
+        .about-section {
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -199,6 +254,7 @@
         <section id="about" class="about-section">
             <h2>About Diaspora Connect</h2>
             <p>We are dedicated to making life easier for Kenyans in America by providing trusted, reliable, and personal services for all your needs back home. Our team is based in both Kenya and the US, ensuring seamless support and communication.</p>
+            <div class="ke-art-float" aria-hidden="true" title="Kenyan Art Floating Decoration"></div>
         </section>
         <section id="contact" class="contact-section">
             <h2>Contact Us</h2>
