--- a/index.html/index.html
+++ b/index.html/index.html
@@ -276,6 +276,18 @@
                 </div>
             </div>
         </section>
+        <!-- BBC Radio Player Section -->
+        <section class="bbc-radio-section" style="max-width: 520px; margin: 2.7rem auto 0 auto; background: linear-gradient(135deg, #fff 60%, #f4f6fa 100%); border-radius: 26px; box-shadow: 0 10px 40px rgba(42, 16, 85, 0.13), 0 2px 8px rgba(0,0,0,0.07); padding: 2.2rem 2.2rem 2rem 2.2rem; text-align: center; border: 2.5px solid #ffd700; position: relative; overflow: hidden; transition: box-shadow 0.3s; display:flex;flex-direction:column;align-items:center;justify-content:center;">
+            <div style="display:flex;align-items:center;justify-content:center;gap:1rem;margin-bottom:1.2rem;">
+                <span style="font-size:2.2rem;">📻</span>
+                <h2 style="margin:0;color:#2b1055;font-size:1.5rem;font-weight:900;letter-spacing:1.2px;">BBC World Service Radio</h2>
+            </div>
+            <p style="color:#6a82fb;font-weight:600;margin-bottom:1.2rem;">Listen to live global news and analysis from the BBC.</p>
+            <audio controls style="width:100%;border-radius:16px;box-shadow:0 2px 12px rgba(42,16,85,0.10);background:#f9f9f9;outline:none;">
+                <source src="https://stream.live.vc.bbcmedia.co.uk/bbc_world_service" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 Diaspora Connect. All rights reserved.</p>
