--- a/index.html/essay-writing.html
+++ b/index.html/essay-writing.html
@@ -13,6 +13,14 @@
         <h1>Request Essay Writing</h1>
     </header>
     <main>
+        <section class="service-briefing" style="max-width:480px;margin:2.5rem auto 1.2rem auto;padding:1.2rem 1.2rem 1rem 1.2rem;background:#f7f9fa;border-radius:14px;box-shadow:0 2px 12px rgba(42,16,85,0.07);color:#2b1055;font-size:1.08rem;">
+            <h2 style="font-size:1.25rem;margin-bottom:0.5rem;color:#00695c;">Essay Writing Briefing</h2>
+            <ul style="margin:0 0 0.5rem 1.2rem;padding:0;">
+                <li>Get professional help with essay writing and editing for all academic levels.</li>
+                <li>Specify your topic, academic level, and deadline.</li>
+                <li>Tips: Be specific about your requirements, attach guidelines, and mention your deadline.</li>
+            </ul>
+        </section>
         <form class="service-form" id="essayForm">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" required>
@@ -22,27 +30,6 @@
 
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required>
-
-            <div class="contact-method-group">
-                <span class="contact-method-label">How would you like us to contact you?</span>
-                <div class="radio-options">
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Email" required>
-                        <span class="custom-radio"></span>
-                        Email
-                    </label>
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Phone" required>
-                        <span class="custom-radio"></span>
-                        Phone
-                    </label>
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Either" required>
-                        <span class="custom-radio"></span>
-                        Either
-                    </label>
-                </div>
-            </div>
 
             <label for="topic">Essay Topic</label>
             <input type="text" id="topic" name="topic" required>
