--- a/pages/construction.html
+++ b/pages/construction.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Request Money Transfer | Diaspora Connect</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="form.css">
+    <title>Request Construction | Diaspora Connect</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
     <header>
-        <img src="../SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
-        <h1>Request Money Transfer</h1>
+        <img src="/assets/SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
+        <h1>Request Construction</h1>
     </header>
     <main>
         <section class="service-briefing" style="max-width:480px;margin:2.5rem auto 1.2rem auto;padding:1.2rem 1.2rem 1rem 1.2rem;background:#f7f9fa;border-radius:14px;box-shadow:0 2px 12px rgba(42,16,85,0.07);color:#2b1055;font-size:1.08rem;">
-            <h2 style="font-size:1.25rem;margin-bottom:0.5rem;color:#00695c;">Money Transfer Briefing</h2>
+            <h2 style="font-size:1.25rem;margin-bottom:0.5rem;color:#00695c;">Construction Briefing</h2>
             <ul style="margin:0 0 0.5rem 1.2rem;padding:0;">
-                <li>Send money securely to family, friends, or business partners in Kenya.</li>
-                <li>Specify the amount, recipient details, and preferred transfer method (bank, mobile, etc.).</li>
-                <li>Tips: Double-check recipient info, mention urgency, and provide any special instructions.</li>
+                <li>Request help with building, renovations, or property development in Kenya.</li>
+                <li>Specify project type, location, budget, and timeline.</li>
+                <li>Tips: Be specific about your needs, attach plans or sketches if available, and mention your timeline.</li>
             </ul>
         </section>
-        <form class="service-form" id="moneyTransferForm">
+        <form class="service-form" id="constructionForm">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" required>
 
@@ -31,11 +31,14 @@
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required>
 
-            <label for="recipient">Recipient Name in Kenya</label>
-            <input type="text" id="recipient" name="recipient" required>
+            <label for="project">Project Type</label>
+            <input type="text" id="project" name="project" placeholder="e.g. House, Apartment, Commercial" required>
 
-            <label for="amount">Amount to Send (Ksh/USD)</label>
-            <input type="text" id="amount" name="amount" required>
+            <label for="location">Location</label>
+            <input type="text" id="location" name="location" required>
+
+            <label for="budget">Budget (Ksh/USD)</label>
+            <input type="text" id="budget" name="budget" required>
 
             <label for="description">Additional Details</label>
             <textarea id="description" name="description" rows="4" placeholder="Describe your needs..."></textarea>
@@ -47,7 +50,7 @@
         <p>&copy; 2025 Diaspora Connect. All rights reserved.</p>
     </footer>
     <script>
-    document.getElementById('moneyTransferForm').addEventListener('submit', async function(e) {
+    document.getElementById('constructionForm').addEventListener('submit', async function(e) {
         e.preventDefault();
         const form = e.target;
         const thankYou = document.getElementById('thankYouMsg');
