--- a/pages/money-transfer.html
+++ b/pages/money-transfer.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Request Airbnb Booking | Diaspora Connect</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="form.css">
+    <title>Request Money Transfer | Diaspora Connect</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
     <header>
-        <img src="../SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
-        <h1>Request Airbnb Booking</h1>
+        <img src="/assets/SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
+        <h1>Request Money Transfer</h1>
     </header>
     <main>
-        <form class="service-form" id="airbnbForm">
+        <section class="service-briefing" style="max-width:480px;margin:2.5rem auto 1.2rem auto;padding:1.2rem 1.2rem 1rem 1.2rem;background:#f7f9fa;border-radius:14px;box-shadow:0 2px 12px rgba(42,16,85,0.07);color:#2b1055;font-size:1.08rem;">
+            <h2 style="font-size:1.25rem;margin-bottom:0.5rem;color:#00695c;">Money Transfer Briefing</h2>
+            <ul style="margin:0 0 0.5rem 1.2rem;padding:0;">
+                <li>Send money securely to family, friends, or business partners in Kenya.</li>
+                <li>Specify the amount, recipient details, and preferred transfer method (bank, mobile, etc.).</li>
+                <li>Tips: Double-check recipient info, mention urgency, and provide any special instructions.</li>
+            </ul>
+        </section>
+        <form class="service-form" id="moneyTransferForm">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" required>
 
@@ -23,35 +31,11 @@
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required>
 
-            <div class="contact-method-group">
-                <span class="contact-method-label">How would you like us to contact you?</span>
-                <div class="radio-options">
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Email" required>
-                        <span class="custom-radio"></span>
-                        Email
-                    </label>
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Phone" required>
-                        <span class="custom-radio"></span>
-                        Phone
-                    </label>
-                    <label class="radio-option">
-                        <input type="radio" name="contact_method" value="Either" required>
-                        <span class="custom-radio"></span>
-                        Either
-                    </label>
-                </div>
-            </div>
+            <label for="recipient">Recipient Name in Kenya</label>
+            <input type="text" id="recipient" name="recipient" required>
 
-            <label for="location">Preferred Location</label>
-            <input type="text" id="location" name="location" placeholder="e.g. Nairobi, Diani" required>
-
-            <label for="dates">Booking Dates</label>
-            <input type="text" id="dates" name="dates" placeholder="e.g. July 1 - July 10, 2025" required>
-
-            <label for="guests">Number of Guests</label>
-            <input type="number" id="guests" name="guests" min="1" required>
+            <label for="amount">Amount to Send (Ksh/USD)</label>
+            <input type="text" id="amount" name="amount" required>
 
             <label for="description">Additional Details</label>
             <textarea id="description" name="description" rows="4" placeholder="Describe your needs..."></textarea>
@@ -63,7 +47,7 @@
         <p>&copy; 2025 Diaspora Connect. All rights reserved.</p>
     </footer>
     <script>
-    document.getElementById('airbnbForm').addEventListener('submit', async function(e) {
+    document.getElementById('moneyTransferForm').addEventListener('submit', async function(e) {
         e.preventDefault();
         const form = e.target;
         const thankYou = document.getElementById('thankYouMsg');
